force-app/main/default/objects/Org_Health_Metric__c/Org_Health_Metric__c.object-meta.xml
<CustomObject>
    <label>Org Health_Metric__c</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Health_Metric__cs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>