force-app/main/default/objects/Org_Health_Metric__c/fields/Metric_Type__c.field-meta.xml
<CustomField>
    <fullName>Metric_Type__c</fullName>
    <label>Metric Type__c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>