force-app/main/default/objects/Org_Health_Metric__c/fields/Metric_Value__c.field-meta.xml
<CustomField>
    <fullName>Metric_Value__c</fullName>
    <label>Metric Value__c</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>