force-app/main/default/objects/Org_Health_Metric__c/fields/Recorded_Date__c.field-meta.xml
<CustomField>
    <fullName>Recorded_Date__c</fullName>
    <label>Recorded Date__c</label>
    <type>Datetime</type>
</CustomField>