force-app/main/default/objects/Org_Health_Metric__c/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <label>Threshold _c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>